Add DTO. Implement "Edit" functionality