@@ -1,6 +1,8 @@
 package com.example.university.controller.user;
 
+import com.example.university.dto.ProfessorDTO;
 import com.example.university.model.user.Professor;
+import com.example.university.service.university.CourseService;
 import com.example.university.service.user.ProfessorService;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -12,31 +14,34 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
+import java.util.Arrays;
 import java.util.List;
 
 
 @WebMvcTest(ProfessorController.class)
 class TestProfessorController {
-
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
     private ProfessorService professorService;
 
+    @MockBean
+    private CourseService courseService;
+
     @Test
     @WithMockUser
-    void testListFaculties() throws Exception {
-        List<Professor> professors = List.of(
-                new Professor(1L, 2L),
-                new Professor(2L, 2L)
+    void professorPage() throws Exception {
+        List<ProfessorDTO> mockProfessors = Arrays.asList(
+                new ProfessorDTO(1L, "Professor 1", "Course 1"),
+                new ProfessorDTO(2L, "Professor 2", "Course 2")
         );
-        Mockito.when(professorService.getAllProfessors()).thenReturn(professors);
+
+        Mockito.when(professorService.getAllProfessorDTOs()).thenReturn(mockProfessors);
 
         mockMvc.perform(MockMvcRequestBuilders.get("/professors"))
                 .andExpect(MockMvcResultMatchers.status().isOk())
-                .andExpect(MockMvcResultMatchers.view().name("/users/professors"))
-                .andExpect(MockMvcResultMatchers.model().attributeExists("professors"));
-
+                .andExpect(MockMvcResultMatchers.model().attributeExists("professors"))
+                .andExpect(MockMvcResultMatchers.view().name("/users/professors"));
     }
 }
